# tq-launcher

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  test
.github/workflows/: tauri.yml
src/: lib.rs  main.ts  reqs.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tql-internal/src/: lib.rs  paths.rs
tql_gui/: index.html  package.json  reset
tql_gui/src/: main.ts  styles.css
tql_gui/src-tauri/: Cargo.toml  tauri.conf.json
tql_gui/src-tauri/src/: main.rs
tql_internal/: Cargo.toml
tql_internal/src/: instancefile.rs  lib.rs  paths.rs  reqs.rs  zippy.rs
