[package]
name = "tq-launcher"
version = "0.1.0"
edition = "2021"
default-run = "tql_gui"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", optional = true, features = ["derive"] }
dirs = "5.0.1"

[features]
default = ["cli", "gui"]
# default = []
gui = []
cli = ["clap"]

[[bin]]
name="tql"
required-features = ["cli"]

[[bin]]
name="tql_gui"
required-features = ["gui"]
