[package]
name = "tq-launcher"
version = "0.1.0"
edition = "2021"
default-run = "tql_gui"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", optional = true, features = ["derive"] }
dirs = "5.0.1"
eframe = { version = "0.27.2", optional = true }
egui_extras = "0.27.2"

[features]
default = ["gui"]
# default = []
gui = ["eframe"]
cli = ["clap"]

[[bin]]
name="tql"
required-features = ["cli"]

[[bin]]
name="tql_gui"
required-features = ["gui"]
