[package]
name = "tql_internal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
octocrab = "0.38.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
shlex = "1.3.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.13"
zip = "2.1.0"

